crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_no_inherited_shadow_for_own_attach_ordering.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
assertion_line: 458
expression: "render(\"w/helpers.R\", helpers_source, helpers.diagnostics(&db))"
---
w/helpers.R
(no diagnostics)
