crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_no_inherited_shadow_when_file_binds_the_name_itself.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
assertion_line: 386
expression: "render(\"w/helpers.R\", helpers_source, helpers.diagnostics(&db))"
---
w/helpers.R
(no diagnostics)
