crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_no_inherited_shadow_when_neither_binding_is_effectful.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"w/R/helpers.R\", helpers_source, helpers.diagnostics(&db))"
---
w/R/helpers.R
(no diagnostics)
