crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_source_cycle.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"w/a.R\", a_source, a.diagnostics(&db))"
---
warning[source-cycle]: This file takes part in a cycle of mutual `source()` calls.
                       Language analysis will be incomplete until the cycle is resolved.
 --> w/a.R:1:1
  |
1 | source("b.R")
  | ^
