crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_source_cycle_package_collation_successor.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"w/pkg/R/b.R\", BACK_EDGE_SUCCESSOR, b.diagnostics(&db))"
---
warning[source-cycle]: This file is part of a cycle in how the project's files load each other.
                       The package already loads its `R/` files in collation order.
                       A `source()` call into a file that the loader also loads creates this cycle.
                       Language analysis will be incomplete until the cycle is resolved.
 --> w/pkg/R/b.R:1:1
  |
1 | library(pkgb)
  | ^
