crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_source_cycle_reported_on_both_files.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"w/b.R\", b_source, b.diagnostics(&db))"
---
warning[source-cycle]: This file is part of a cycle in how the project's files load each other.
                       These files may `source()` each other, or `source()` a file that a loader such as a Shiny app or testthat suite already loads for them.
                       Language analysis will be incomplete until the cycle is resolved.
 --> w/b.R:1:1
  |
1 | source("a.R")
  | ^
