crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_source_cycle_shiny_autoload_sourcing_file.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"w/R/a.R\", BACK_EDGE_SOURCING, a.diagnostics(&db))"
---
warning[source-cycle]: This file is part of a cycle in how the project's files load each other.
                       This Shiny app already loads its `global.R` and `R/` files through `shiny::loadSupport()`.
                       A `source()` call into a file that the loader also loads creates this cycle.
                       Language analysis will be incomplete until the cycle is resolved.
 --> w/R/a.R:1:1
  |
1 | library(pkga)
  | ^
