crates/oak_db/src/tests/snapshots/oak_db__tests__file_diagnostics__diagnostic_source_cycle_testthat_support_sourcing_file.snap
---
source: crates/oak_db/src/tests/file_diagnostics.rs
expression: "render(\"w/pkg/tests/testthat/helper.R\", TESTTHAT_BACK_EDGE_SOURCING,\nhelper.diagnostics(&db))"
---
warning[source-cycle]: This file is part of a cycle in how the project's files load each other.
                       testthat already loads `helper*.R` and `setup*.R` before your tests.
                       A `source()` call into a file that the loader also loads creates this cycle.
                       Language analysis will be incomplete until the cycle is resolved.
 --> w/pkg/tests/testthat/helper.R:1:1
  |
1 | library(pkga)
  | ^
